frontend started + backend fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,26 @@
 /backend/node_modules
+/backend/.tmp
+/backend/.env
+/backend/*.log
+/backend/log.txt
+/backend/npm-debug.log*
+
+/frontend/.angular
+/frontend/.idea
+/frontend/.ionic
+/frontend/.sass-cache
+/frontend/.sourcemaps
+/frontend/.versions
+/frontend/.vscode
+/frontend/coverage
+/frontend/dist
 /frontend/node_modules
+/frontend/platforms
+/frontend/plugins
+/frontend/www
 
-/build/node_modules
-/build/node_modules
-
-/dist/node_modules
-/dist/node_modules
+/frontend/.tmp
+/frontend/.env
+/frontend/*.log
+/frontend/log.txt
+/frontend/npm-debug.log*
