--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -151,6 +151,7 @@
     }
   },
   "cli": {
+    "analytics": "eb589f8b-c741-4a99-be3f-4bedcdf13d3a",
     "defaultCollection": "@ionic/angular-toolkit"
   },
   "schematics": {
