--- a/webScraping/package.json
+++ b/webScraping/package.json
@@ -18,6 +18,7 @@
     "debug": "^4.3.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "http": "^0.0.1-security"
+    "http": "^0.0.1-security",
+    "mongoose": "^6.3.5"
   }
 }
