--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+/service/node_modules
+/service/.tmp
+/service/.env
+/service/*.log
+/service/log.txt
+/service/npm-debug.log*
+
 /backend/node_modules
 /backend/.tmp
 /backend/.env
