--- a/backend_v2/package.json
+++ b/backend_v2/package.json
@@ -8,5 +8,11 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "apollo-server": "^3.8.1",
+    "graphql": "^16.5.0",
+    "graphql-tools": "^8.2.11",
+    "mongoose": "^6.3.5"
+  }
 }
