--- a/backend_v2/package.json
+++ b/backend_v2/package.json
@@ -2,17 +2,20 @@
   "name": "backend_v2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.8.1",
+    "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
     "graphql-tools": "^8.2.11",
-    "mongoose": "^6.3.5"
+    "mongoose": "^6.3.5",
+    "nodemon": "^2.0.16"
   }
 }
