--- a/backend_v2/package.json
+++ b/backend_v2/package.json
@@ -2,10 +2,10 @@
   "name": "backend_v2",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon"
+    "start": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
