--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
     "@ionic-native/social-sharing": "^5.36.0",
     "@ionic/angular": "^6.0.0",
     "cordova-android": "10.1.2",
+    "html2canvas": "^1.4.1",
+    "ngx-clipboard": "^15.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
