--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,13 @@
 /service/log.txt
 /service/npm-debug.log*
 
+/backend/node_modules
+/backend/.tmp
+/backend/.env
+/backend/*.log
+/backend/log.txt
+/backend/npm-debug.log*
+
 /backend_v2/node_modules
 /backend_v2/.tmp
 /backend_v2/.env
