--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
     "@angular/service-worker": "~13.2.2",
+    "@ionic-native/core": "^5.36.0",
     "@ionic-native/social-sharing": "^5.36.0",
     "@ionic/angular": "^6.0.0",
+    "clipboard": "^2.0.11",
     "cordova-android": "10.1.2",
     "html2canvas": "^1.4.1",
     "ngx-clipboard": "^15.1.0",
