--- a/scheduledService/package.json
+++ b/scheduledService/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "mongoose": "^6.4.1",
     "nodemon": "^2.0.16"
   }
 }
