finished adjustments to go live

--- a/service/src/.env
+++ b/service/src/.env
@@ -1,3 +1,3 @@
 PORT=3334
-MONGO_CONNECTION_STRING=mongodb://admin:Mudar1q2w3e@localhost:27017
+MONGO_CONNECTION_STRING=mongodb://root:Mudar1q2w3e@93.188.167.175:27017
 ENDPOINT=http://localhost:3333
