--- a/wordValidationAPI/.env
+++ b/wordValidationAPI/.env
@@ -1,5 +1,5 @@
  MYSQL_USER=root
  MYSQL_PASSWORD=Mudar@1q2w3e
  MYSQL_DATABASE=WordValidation
- MYSQL_HOST=azimuth.rocketbit.com.br
- MYSQL_PORT=5501
+ MYSQL_HOST=93.188.167.175
+ MYSQL_PORT=3306
